Refactored; fixed CLS issues; Fixed Title spacing when there's a toc; fiexed Internal spacing; fixed internal sticky behavior when scrolling past the content

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,6 +114,7 @@ body.helpxmain-article h1 {
 
 main .section.dark.xs-spacing.page-title {
   padding: 0 2.5rem 10px 0 !important;
+  margin: 0;
   font-size: 36px;
   font-weight: 500;
   color: var(--static-color-white)!important;
@@ -143,6 +144,7 @@ main .internal-banner .banner {
   font-weight: 700;
   padding: 12px 0;
   line-height: 24px;
+  margin: 0;
   text-transform: uppercase;
   color: var(--static-color-white);
 }
@@ -150,6 +152,7 @@ main .internal-banner .banner {
 main .internal-banner {
   position: absolute;
   width: 100%;
+  margin: 0;
 }
 /* info icon - added via global block function in scripts.js */
 main .internal-banner .banner .icon {
@@ -216,17 +219,17 @@ footer {
   content: 'Internal';
   color: #c00;
   font-weight: 700;
-  padding-bottom: 12px;
 }
 
 .on-this-page > .content {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 2px;
   top: 20px;
   background: url('https://main--helpx-internal--adobecom.hlx.page/media_1b45f544d71effad595a85747635d01832a3c0149.png');
   background-color: var(--on-this-page-background);
   padding: 10px;
+  margin: 0;
 }
 
 .on-this-page h5 {
@@ -314,13 +317,6 @@ footer {
 
   .page-title {
     height: 62px;
-  }
-}
-
-/* accommodate global nav */
-@media (min-width: 900px) {
-  .page-title {
-    top: 55px;
   }
 }
 
